--- a/03/3.3/css/style.css
+++ b/03/3.3/css/style.css
@@ -2,3 +2,15 @@ h1 {
     font-size: 30px;
     font-style: italic;
 }
+/* h1, h2 {
+    color: red;
+} */
+/* * {
+    color: blue;
+} */
+.heading {
+    color: red;
+}
+#heading {
+    color: blue;
+}
