--- a/03/3.5/css/style.css
+++ b/03/3.5/css/style.css
@@ -1,12 +1,25 @@
 .parent {
-    max-width: 1000px;
+    max-width: 700px;
     margin: 0 auto;
     display: flex;
 }
 
 .child {
     min-height: 200px;
-    width: 333px;
+    width: 333%;
     background-color: red;
     border: 2px solid #000;
+}
+
+.html {
+    font-size: 15px;
+}
+
+.block {
+    font-size: 50px;
+}
+
+.block p {
+    font-size: 1rem;
+    /* margin-bottom: 1em; */
 }
