--- a/03/3.9/css/style2.css
+++ b/03/3.9/css/style2.css
@@ -1,9 +1,15 @@
 body {
     margin: 0;
 }
+.row {
+    font-size: 0;
+}
 .col {
     display: inline-block;
+    padding: 30px;
     width: 25%;
     height: 300px;
+    box-sizing: border-box;
+    font-size: 16px;
     background-color: darkseagreen;
 }
