--- a/03/3.13/css/style.css
+++ b/03/3.13/css/style.css
@@ -1,8 +1,3 @@
-/* * {
-    margin: 0;
-    padding: 0;
-} */
-
 html {
     box-sizing: border-box;
 }
@@ -12,16 +7,20 @@ html {
 *::after {
     box-sizing: inherit;
 }
-
 a {
     color: inherit;
     text-decoration: none;
 }
-
 img {
     max-width: 100%;
 }
-
 body {
-    font-family: 'font', sans-serif;
+    font-family: "font", sans-serif;
+}
+
+.content {
+    padding: 2rem 1rem;
+}
+h2 {
+    margin: 0 0 1em 0;
 }
