--- a/03/3.15/css/style.css
+++ b/03/3.15/css/style.css
@@ -1,7 +1,6 @@
 html {
     box-sizing: border-box;
 }
-
 *,
 *::before,
 *::after {
@@ -18,3 +17,26 @@ body {
     font-family: "font", sans-serif;
 }
 
+.main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    color: #fff;
+    background-color: #070217;    
+}
+.logo {
+    display: inline-block;
+    margin-bottom: 50px;
+}
+.links {
+    margin-bottom: 50px;
+}
+.link {
+    display: inline-block;
+    padding: 24px 49px;
+}
+.link:not(:last-child) {
+    margin-right: 25px;
+}
