--- a/04/4.08/css/style.css
+++ b/04/4.08/css/style.css
@@ -5,4 +5,19 @@
     border-radius: 50px;
     border-top-left-radius: 0;
     border-bottom-right-radius: 0;
+    box-shadow: 5px 3px 10px #000;
+}
+.shadow {
+    margin-top: 20px;
+    width: 300px;
+    height: 50px;
+    text-shadow: 5px 3px 10px red;
+}
+.bg {
+    margin-top: 20px;
+    width: 300px;
+    height: 300px;
+    background-color: #000;
+    background-color: red;
+    background-color: rgba(0,0,255);
 }
