--- a/04/4.17/css/style.css
+++ b/04/4.17/css/style.css
@@ -41,16 +41,14 @@ body {
     background-color: #3f2aff;
 }
 .link-download {
-    display: inline-block;
-    width: 175px;
-    height: 20px;
-    background-position: center;
-    background-size: cover;
+    padding-left: 30px;
+    background-position: left center;
+    background-size: 20px 20px;
     background-repeat: no-repeat;
-    background-image: url("https://furman.top/uploads/posts/2024-03/1710837888_furman-top-p-zastavka-nebo-9.jpg");
+    background-image: url("../img/download-icon-clipart-4.png");
     font-weight: 700;
     font-size: 18px;
-    background-color: #3f2aff;
+    color: #3f2aff;
 }
 .link:not(:last-child) {
     margin-right: 25px;
@@ -116,4 +114,20 @@ body {
     display: inline-block;
     margin-bottom: 40px;
     width: 872px;
+}
+.text-highlight {
+    border-radius: 20px;
+    padding: 50px 95px;
+    width: 100%;
+    font-weight: 700;
+    font-size: 30px;
+    color: white;
+    background-color: #3f2aff;
+}
+.gray-box-image-1 {
+    padding-right: 150px;
+    background-position: right center;
+    background-size: 300px 300px;
+    background-repeat: no-repeat;
+    background-image: url("../img/download-icon-clipart-4.png");
 }
