--- a/05/5.13/css/style.css
+++ b/05/5.13/css/style.css
@@ -17,26 +17,154 @@ body {
     font-family: Arial, Verdana, sans-serif;
 }
 
-
-
+.main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    color: #fff;
+    background-color: #070217;    
+}
+.logo {
+    display: inline-block;
+    margin-bottom: 50px;
+}
+.links {
+    margin-bottom: 50px;
+}
+.link {
+    display: inline-block;
+    padding: 24px 49px;
+    font-weight: 700;
+    font-size: 18px;
+    background-color: #3f2aff;
+}
+.link-download {
+    padding-left: 30px;
+    background-position: left center;
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-image: url("../img/download-icon-clipart-4.png");
+    font-weight: 700;
+    font-size: 18px;
+    color: #3f2aff;
+}
+.link:not(:last-child) {
+    margin-right: 25px;
+}
 .container {
-    margin:  0 auto;
+    margin: 0 auto;
+    padding: 80px 0;
     width: 1170px;
-    background-color: chartreuse;
 }
-.skillbox {
-    font-size: 30px;
-    color: #333;
-    margin-top: 50px;
-    /* width: 137px;
-    height: 30px; */
-}
-.toMain {
-    font-size: 20px;
-    color: #3f2aff;
-    margin-top: 25px;
-}
-h1 {
+.header-1 {
+    margin-top: 0;
+    margin-bottom: 40px;
+    font-weight: 400;
     font-size: 60px;
-    color: #3f2aff;
+    line-height: 60px;
+    color: #333;
+}
+.header-2 {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.header-3 {
+    margin-top: 0;
+    margin-bottom: 40px;
+}
+.text {
+    width: 872px;
+    margin-top: 0;
+    margin-bottom: 40px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    color: #333;
+}
+.gray-box {
+    border-radius: 20px;
+    padding: 30px;
+    background-color: #f3f3f3;
+}
+.gray-box:not(:last-child) {
+    margin-bottom: 40px;
+}
+.gray-box .text {
+    width: 692px;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.ul-content {
+    margin-left: 15px;
+}
+.li-content {
+    border-bottom: 1px solid #3f2aff;
+    font-size: 20px;
+    color: #3f2aff; 
+}
+.li-content:not(:last-child) {
+    margin-bottom: 20px;
+}
+.li-content::marker {
+    color: #3f2aff;    
+}
+.img-art {
+    margin-bottom: 40px;
+    width: 872px;
+}
+.img-art2 { 
+    width: 450px;
+    margin-bottom: 40px;
+}
+.figure-art {
+    display: inline-block;
+    margin-bottom: 40px;
+    width: 872px;
+}
+.text-highlight {
+    border-radius: 20px;
+    padding: 50px 95px;
+    width: 100%;
+    font-weight: 700;
+    font-size: 30px;
+    color: white;
+    background-color: #3f2aff;
+}
+.gray-box-image-1 {
+    padding-right: 150px;
+    background-position: right center;
+    background-size: 350px 350px;
+    background-repeat: no-repeat;
+    background-image: url("../img/book_1.jpg");
+}
+.gray-box-image-2 {
+    padding-right: 150px;
+    background-position: right center;
+    background-size: 350px 350px;
+    background-repeat: no-repeat;
+    background-image: url("../img/book_2.jpg");
+}
+h2 {
+    font-size: 40px;
+    line-height: 46px;
+    color: #333;
+}
+h3 {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    color: #333;
+}
+figure {
+    font-size: 0;
+}
+figcaption {
+    border: 1px solid #b6b6b6;
+    padding-top: 19px;
+    padding-bottom: 19px;
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
 }
